# EvoMaster

./: .env.template  .gitignore  README-zh.md  README.md  pyproject.toml  requirements.txt  run.py
configs/: config.yaml
configs/browse_master/: config.yaml  mcp_config.json
configs/feishu/: config.yaml
configs/mat_master/: config.yaml  mcp_config.json
configs/minimal/: config.yaml  deepseek-v3.2-example.yaml  gpt-5-example.yaml
configs/minimal_kaggle/: deepseek-v3.2-example.yaml  gpt-5-example.yaml  openrouter-example.yaml
configs/minimal_multi_agent/: config.yaml  deepseek-v3.2-example.yaml  gpt-5-example.yaml
configs/minimal_multi_agent_parallel/: deepseek-v3.2-example.yaml  gpt-5-example.yaml
configs/minimal_skill_task/: deepseek-v3.2-example.yaml
configs/ml_master/: config.yaml
configs/x_master/: config.yaml
docs/: core.md
docs/migration/: MIGRATION_GUIDE_v0.0.1_to_v0.0.2.md
docs/zh/: core.md
evomaster/: __init__.py  config.py
evomaster/adaptors/: __init__.py
evomaster/adaptors/calculation/: README.md  __init__.py  oss_upload.py  path_adaptor.py
evomaster/agent/: __init__.py  agent.py  context.py
evomaster/agent/session/: local.py
evomaster/agent/tools/: __init__.py  base.py  skill.py
evomaster/core/: __init__.py  exp.py  playground.py
evomaster/env/: README.md  __init__.py  base.py  bohrium.py  local.py
evomaster/env/docker/: base.dockerfile
evomaster/env/k8s/: run-mle.yaml
evomaster/interface/feishu/: __init__.py  __main__.py  app.py  client.py  config.py  dedup.py  dispatcher.py  sender.py  (+1 more)
evomaster/skills/: __init__.py  base.py
evomaster/utils/: __init__.py  llm.py  types.py
examples/env/: local_env_examples.py
examples/llm/: config.yaml
playground/: README.md  README_CN.md
playground/browse_master/: README.md  README_CN.md
playground/minimal_kaggle/: __init__.py  requirements.txt
playground/minimal_multi_agent_parallel/: README.md  README_CN.md
(+126 files in other folders)
