[project]
name = "evomaster"
version = "0.1.0"
description = "The Universal Infrastructure for Building Evolving Autonomous Scientific Research Agents"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic",
    "PyYAML",
    "openai",
    "anthropic",
    "google-genai",
    "mcp",
    "flask",
    "python-dotenv",
    # Calculation path adaptor (mat_master) needs OSS upload for local file -> URL
    "oss2",
]

[project.optional-dependencies]
# Reserved for other calculation-related extras; oss2 is now main dep for mat_master
calculation = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["evomaster"]
